Make sure desktop file opens application in terminal window so that errors and other logs can be seen by end users

--- a/linux/uk.co.agilemde.agileuml.desktop
+++ b/linux/uk.co.agilemde.agileuml.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Terminal=false
+Terminal=true
 Name=AgileUML Toolset
 Comment=Tools for rapid MDE-based software development with UML for various software platforms
 GenericName=MDE-based UML editor and code generator for building software applications
